--- a/templates/base.html
+++ b/templates/base.html
@@ -24,9 +24,6 @@
     <!-- Font Awesome CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
-    <!-- Google Fonts -->
-
-
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
@@ -52,7 +49,7 @@
                         <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/team/">Team</a>
+                        <a class="nav-link" href="{% url 'team' %}">Team</a>
                     </li>
                     {% if user.is_authenticated %}
                         <li class="nav-item">
@@ -87,10 +84,14 @@
         <p>&copy; 2025 FamilyHack5</p>
     </footer>
 
+    <!-- Bootstrap JS Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
     {% if debug %}
     <script src="{% url 'django_browser_reload:reload' %}"></script>
     {% endif %}
 
+    {% block extra_js %}{% endblock %}
 </body>
 
 </html>
