--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,7 @@
                         <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'team' %}">Team</a>
+                        <a class="nav-link" href="/team/">Team</a>
                     </li>
                     {% if user.is_authenticated %}
                     <li class="nav-item">
