--- a/templates/base.html
+++ b/templates/base.html
@@ -61,6 +61,9 @@
                         <a class="nav-link" href="/assistant/">Assistant</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/notes/">Notes</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/accounts/logout/">Logout</a>
                     </li>
                     {% else %}
