Make the navbar stay at a fixed position at the top

--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="position: fixed; top: 0; width: 100%; z-index: 1000;">
         <div class="container-fluid">
             <a class="navbar-brand" href="/"><img src="{% static 'images/logo.png' %}" class="logo"
                     alt="uncleTech logo" /></a>
