--- a/templates/base.html
+++ b/templates/base.html
@@ -58,14 +58,9 @@
                         <a class="nav-link" href="{% url 'assistant' %}">Assistant</a>
                     </li>
                     <li class="nav-item">
-
-                        <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
-
-                        <a class="nav-link" href="/notes/">Notes</a>
-                    </li>
+                        <a class="nav-link" href="{% url 'notes' %}">Notes</a>
                     <li class="nav-item">
-                        <a class="nav-link" href="/accounts/logout/">Logout</a>
-
+                        <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
                     </li>
                     {% else %}
                     <li class="nav-item">
