--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" id="logo" href="/"><img src="{% static 'images/logo.png' %}"
+            <a class="navbar-brand ms-2 ps-1 py-2" id="logo" href="/"><img src="{% static 'images/logo.png' %}"
                     alt="uncleTech logo" /></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -98,7 +98,8 @@
             <div class="col-lg-4 github-container text-center text-end">
                 <h3 class="footer-title mb-3">Find Us on GitHub</h3>
                 <div class="github-link">
-                    <a href="https://github.com/Swewi/Hackteam5_may25" aria-label="Opens GitHub in a new tab" target="_blank" rel="noopener" class="github-btn">
+                    <a href="https://github.com/Swewi/Hackteam5_may25" aria-label="Opens GitHub in a new tab"
+                        target="_blank" rel="noopener" class="github-btn">
                         <i class="fab fa-github fa-2x"></i>
                     </a>
                 </div>
@@ -120,9 +121,6 @@
     {% endif %}
 
     {% block extra_js %}{% endblock %}
-
-    <!-- Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
