--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -5,6 +5,9 @@
 {% block title %}Home - FamilyHack5{% endblock %}
 
 {% block content %}
-<h2>Hello, world!</h2>
-<p>This is the homepage.</p>
+<div class="container">
+    <h1>Welcome to UncleTech!</h1>
+    <p>Your one-stop solution for technical queries and questions about your tech.</p>
+    
+</div>
 {% endblock %}
