--- a/static/css/home.css
+++ b/static/css/home.css
@@ -10,7 +10,7 @@
 }
 
 .padding-1 {
-    padding: 6rem 2rem;
+    padding: 4rem 2rem;
 }
 
 .padding-2 {
@@ -19,4 +19,8 @@
 
 .padding-3 {
     padding: 1rem;
+}
+
+.mirror {
+    transform: scaleX(-1);
 }
