Change footer, add styling for the texts

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -26,7 +26,7 @@
     <div class="row mt-4">
       <div class="col-md-12">
         <div class="text-background rounded-5 padding-2 text-start">
-            <h4 class="text-start">Meet uncleTech</h4>
+            <h3 class="text-start">Meet uncleTech</h3>
           <p>
             Meet Uncle Tech — Your Friendly Tech Helper!  
             Struggling with the Wi-Fi? Can't find the settings on your phone?  
@@ -56,23 +56,23 @@
           </p>
           <br />
           <h3 class="text-center">Why Sign Up?</h3>
-  
-          <h5 class="text-start">Get Help Anytime</h5>
+          <br />
+          <p class="text-start fs-4">Get Help Anytime</p>
           <p>
             Once you're signed in, you can ask Uncle Tech all your questions — like how to fix the Wi-Fi or use your phone — and get simple, friendly answers.
           </p>
   
-          <h5 class="text-start">Keep Track</h5>
+          <p class="text-start fs-4">Keep Track</p>
           <p>
             We'll remember the questions you ask, so you can come back and check them again later. No need to write anything down.
           </p>
   
-          <h5 class="text-start">Made for You</h5>
+          <p class="text-start fs-4">Made for You</p>
           <p>
             Uncle Tech is built especially for folks who didn't grow up with all this new tech. We keep things clear, gentle, and stress-free.
           </p>
   
-          <h5 class="text-start">Safe & Private</h5>
+          <p class="text-start fs-4">Safe & Private</p>
           <p>
             Your information stays just between us. No sharing, no spam — promise!
           </p>
