--- a/templates/base.html
+++ b/templates/base.html
@@ -83,20 +83,20 @@
     <footer class="footer mt-auto dark-bg p-0 pt-1">
         <div class="row footer-row me-0">
             <div class="col-lg-4 text-center quick-links-container">
-                <h3 class="footer-title mb-1">Quick Links</h3>
+                <p class="footer-title mb-1 fs-6">Quick Links</p>
                 <div class="quick-links-content d-flex flex-column">
-                    <a href="{% url 'home' %}" class="mb-1" rel="noopener" aria-label="Home page">Home</a>
-                    <a href="{% url 'team:team' %}" class="mb-1" rel="noopener" aria-label="About page">Meet the
+                    <a href="{% url 'home' %}" class="mb-1 fs-5" rel="noopener" aria-label="Home page">Home</a>
+                    <a href="{% url 'team:team' %}" class="mb-1 fs-5" rel="noopener" aria-label="About page">Meet the
                         Team</a>
                 </div>
             </div>
             <div class="col-lg-4 img-fluid text-center" id="logo">
                 <a href="/" target="_blank" rel="noopener" aria-label="Opens a page for the site">
-                    <img src="{% static 'images/logo.png' %}" alt="uncleTech logo" />
+                    <img src="{% static 'images/logo.png' %}" class="w-25" alt="uncleTech logo" />
                 </a>
             </div>
             <div class="col-lg-4 github-container text-center text-end">
-                <h3 class="footer-title mb-3">Find Us on GitHub</h3>
+                <p class="footer-title mb-3">Find Us on GitHub</p>
                 <div class="github-link">
                     <a href="https://github.com/Swewi/Hackteam5_may25" aria-label="Opens GitHub in a new tab"
                         target="_blank" rel="noopener" class="github-btn">
