--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="position: fixed; top: 0; width: 100%; z-index: 1000;">
         <div class="container-fluid">
             <a class="navbar-brand ms-2 ps-1 py-2" id="logo" href="/"><img src="{% static 'images/logo.png' %}"
                     alt="uncleTech logo" /></a>
@@ -121,9 +121,4 @@
     {% endif %}
 
     {% block extra_js %}{% endblock %}
-
-    <!-- Font Awesome JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
-</body>
-
 </html>
