--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="position: fixed; top: 0; width: 100%; z-index: 1000;">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand ms-2 ps-1 py-2" id="logo" href="/"><img src="{% static 'images/logo.png' %}"
                     alt="uncleTech logo" /></a>
@@ -112,7 +112,7 @@
             </p>
         </div>
     </footer>
-
+</body>    
     <!-- Bootstrap JS Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
