--- a/assistant/templates/assistant/assistant.html
+++ b/assistant/templates/assistant/assistant.html
@@ -19,10 +19,10 @@
 
     .user-question {
         font-weight: bold;
-        color: #007bff;
+        color: #0c1d2f;
         background-color: #e6f0ff;
         position: relative;
-        border: 2px solid #007bff;
+        border: 2px solid #0c1d2f;
         border-radius: 20px;
         padding: 16px 24px;
         margin: 16px 0 24px 0;
@@ -36,7 +36,7 @@
         width: 0;
         height: 0;
         border: 12px solid transparent;
-        border-bottom: 16px solid #007bff;
+        border-bottom: 16px solid #0c1d2f;
         border-top: 0;
         border-radius: 4px;
     }
@@ -44,6 +44,7 @@
     .gemini-response {
         background-color: #e6f0ff;
         font-style: italic;
+        font-weight: bold;
         color: #11441d;        
         /* Ensures the image covers the whole div */
         background-repeat: no-repeat;
@@ -72,12 +73,13 @@
 
     .you-label {
         font-weight: bold;
-        color: #007bff;  
+        color: #0c1d2f;  
         margin-left: 10px;    
     }
 
     .assistant-label {
         font-style: italic;
+        font-weight: bold;
         color: #11441d;  
         margin-left: 10px;
     }
@@ -247,6 +249,11 @@
         messageDiv.style.borderRadius = '5px';
         messageDiv.style.zIndex = '1001';
         messageDiv.style.color = 'green';
+        messageDiv.style.fontWeight = 'bold';
+        messageDiv.style.border = '1px solid #ccc';
+        messageDiv.style.boxShadow = '0 2px 10px rgba(0, 0, 0, 0.1)';
+        messageDiv.style.fontSize = '16px';
+        messageDiv.style.transition = 'opacity 0.5s ease-in-out';
         document.body.appendChild(messageDiv);
 
         setTimeout(() => {
