--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="position: fixed; top: 0; width: 100%; z-index: 1000;">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand ms-2 ps-1 py-2" id="logo" href="/"><img src="{% static 'images/logo.png' %}"
                     alt="uncleTech logo" /></a>
